# rummy-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml  rust.yml
examples/: basic_rummy.rs  basic_rummy_old.rs  rummy.rs
examples/basic_rummy/: app.rs  main.rs
examples/basic_rummy/ui/: components.rs  mod.rs
examples/basic_rummy/ui/components/: discard.rs  error.rs  form_meld.rs  game_state.rs  layoff.rs  main_menu.rs  mod.rs  round_game_end.rs
src/: lib.rs  main.rs  player.rs
src/cards/: card.rs  deck.rs  meld.rs  mod.rs  suit_rank.rs
src/cards/tests/: card.rs  deck.rs  meld.rs  mod.rs  run.rs  set.rs
src/cards/tests/card/: mod.rs
src/cards/tests/deck/: mod.rs
src/cards/tests/meld/: edge_cases.rs  errors.rs  meld_creation.rs  meld_layoff.rs  meld_properties.rs  mod.rs
src/cards/tests/run/: mod.rs
src/cards/tests/set/: mod.rs
src/game/: action.rs  actions.rs  error.rs  game.rs  mod.rs  phases.rs  rules.rs  score.rs  state.rs  trait.rs
src/game/variants/: mod.rs
src/game/variants/basic/: config.rs  game.rs  mod.rs  rules.rs  score.rs  state.rs
src/game/variants/standard/: actions.rs  mod.rs  state.rs
src/game_rewrite/: action.rs  error.rs  game.rs  mod.rs  score.rs  state.rs
src/game_rewrite/variants/basic/: game.rs  rules.rs  score.rs  state.rs
src/serialization/: cards.rs  game.rs  mod.rs  player.rs
src/wrappers/: allowed_actions.rs  history.rs  mod.rs  possible_plays.rs  replay.rs
src/wrappers/history/: mod.rs
tests/: mod.rs
tests/basic_rummy/: basic_flow.rs  default_dealing.rs  drawing.rs  form_meld.rs  hand_rearrangement.rs  mod.rs  override_dealing.rs  player_ops.rs  serialization.rs
tests/basic_rummy/wrappers/: history.rs  mod.rs  replay.rs
tests/common/: fixtures.rs
