[package]
name = "rummy"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/mhbka/rummy-rs"
description = "a crate for the card game Rummy"
license = "MIT"
readme = "README.md"
categories = ["games"]
keywords = ["card", "game", "poker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
rand = { version = "0.8.5", features = ["std_rng"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "2.0.15"

[dependencies.serde]
version = "1.0.203"
features = ["derive"]
optional = true

[dev-dependencies]
rprompt = "2.1.1"
ratatui = "0.29.0"
crossterm = "0.29.0"
serde_json = "1.0.145"

[features]
default = []
serde = ["dep:serde"]
